--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,6 +138,10 @@ img {
     margin-bottom: 13rem;
 }
 
+.plus-bottom3{
+  margin-bottom: 48rem;
+}
+
 /* End All */
 
 
@@ -243,6 +247,14 @@ img {
 .sign a:hover{
     color: var(--footer-color);
     text-decoration: none;
+}
+
+.header .dropdown{
+  margin-right: 5rem;
+}
+
+.dropdown-menu {
+  min-width: none;
 }
 
 .dropdown-toggle{
@@ -487,7 +499,8 @@ width: 85rem;
 
 .blog .box-container{
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 8rem;
 }
 
 .box-blog{
@@ -580,14 +593,16 @@ width: 85rem;
 }
 
 .box-left{
-    height: 400px;
     background-color: var(--footer-color);
 }
 
 
 .box-right{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
     background-color: var(--bg-form);
-    height: 400px;
 }
 
 .aboutus p{
@@ -724,17 +739,14 @@ width: 85rem;
     margin-left: 0.5rem;
 }
 
-.desc-product{
-  margin-left: 0.5rem;
-}
-
 .store-page .box-container{
   flex-wrap: wrap;
 }
 
 .product-store .box-container{
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap:5rem;
 }
 
 /* End Store  */
@@ -846,8 +858,9 @@ width: 85rem;
   }
   .sidebar.open{
     width: 250px;
-    height: 220%;
+    height: 240%;
   }
+
   .sidebar .logo-details{
     display: flex;
     align-items: center;
@@ -1070,6 +1083,11 @@ width: 85rem;
     font-size: 0.8rem;
     color: var(--white);
   }
+
+  .sidebar li .btn.btn-logout:hover{
+    background-color: var(--bg-form);
+    color: var(--black);
+  }
   
   @media (max-width: 420px) {
     .sidebar li .tooltip{
@@ -1245,7 +1263,7 @@ width: 85rem;
   }
 
   .text-content.height{
-    min-height: 250px;
+    min-height: 500px;
   }
 
 /* End My Store */
@@ -1420,20 +1438,25 @@ textarea.form-control{
  }
   
 .footer .box-container {
-display: grid;
-grid-template-columns: 25% 25% 50%;
-padding-left: 1rem;
+display: flex;
 /* gap => memberikan jarak antar kolom yang telah dibagi */
-gap: 3rem;
+gap: 8rem;
+margin-right: 2rem;
 }
 
 .footer .logo{
-height: 70px;
-width: 180px;
+  height: 140px;
+  width: 280px;
 }
 
+.container-footer{
+  display: flex;
+  justify-content: space-between;
+  margin: 3rem;
+}
+
+
 .box-footer {
-width: 100%;
 height: fit-content;
 margin-top: 1rem;
 margin-bottom: 0.6rem;
@@ -1452,9 +1475,10 @@ gap: 0.7rem;
 
 .box-credit{
 display: flex;
-justify-content: flex-end;
+justify-content: flex-start;
 gap: 1.5rem;
 text-align: right;
+margin-bottom: 2rem;
 }
 
 .footer .box-container .sample h3 {
@@ -1528,6 +1552,7 @@ margin-top: 10px;
 }
 
 .alert{
+  position: inherit;
   background-color: var(--footer-color);
 }
 
@@ -1572,8 +1597,69 @@ margin-top: 10px;
 /* Header */
 
 /* End Header */
+@media (max-width: 1330px)
+{
 
-@media (max-width: 768px)
+  /* Home */
+  .box-contain .box-container{
+    justify-content: center;
+  }
+
+  .box-contain .banner {
+    width: 300px;
+    height: 300px;
+  }
+
+  .box-contain h2 {
+    font-size: medium;
+    margin-bottom: 1rem;
+  }
+
+  /* Footer */
+  .footer .box-container {
+    gap: 5rem;
+    }
+
+
+  /* Blog */
+  .blog-card{
+    width: 250px;
+  }
+
+  .info-blog {
+    grid-template-columns: 13% 4% 20%;
+  }
+
+  /* Store */
+  .store-page .store-card {
+    width: 220px;
+  }
+
+  .store-box2 {
+    padding-right: 2rem;
+  }
+
+  .product-store .box-container {
+    gap: 1rem;
+  }
+
+  /* About Us */
+
+  /* My Store UMK */
+  .text-content.height {
+    min-height: 700px;
+  }
+
+  /* Product UMKM */
+  .box-container {
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+
+}
+
+@media (max-width: 870px)
 {
 /* Home */
 .box-container{
@@ -1590,6 +1676,11 @@ margin-top: 10px;
 .box-contain .box-container{
   padding: 0;
   gap: 5rem;
+}
+
+.box{
+  width: 200px;
+  height: 200px;
 }
 
 .box-contain .banner{
@@ -1627,26 +1718,25 @@ margin-top: 10px;
 }
 
 /* Footer */
-.footer .box-container{
-  grid-template-columns: 40% 40%;
+.container-footer {
+  flex-wrap: wrap;
 }
 
-.box-send .input-group {
-  width: 130px;
+.footer .box-container {
+  justify-content: flex-start;
+  margin-left: 1rem;
 }
 
-.box-send {
-  gap: 3.5rem;
-}
-
-.box-credit{
-  margin-right: 1rem;
-}
 
 /* BLOG */
 
 .store-box3{
   padding-right: 0;
+}
+
+.blog .container-home{
+  padding: 0 !important;
+  justify-content: center;
 }
 
 /* ABOUT-US */
@@ -1677,7 +1767,7 @@ margin-top: 10px;
 }
 
 .product-store .box-container{
- justify-content: space-between;
+ justify-content: flex-start;
 }
 
 .store-card{
@@ -1689,6 +1779,7 @@ margin-top: 10px;
   display: grid;
   gap: 1.3rem;
   grid-template-columns: 50% 50%;
+  justify-items: center;
 }
 
 .blog-card{
@@ -1701,7 +1792,7 @@ margin-top: 10px;
 }
 
 .info-blog{
-  grid-template-columns: 15% 4% 20%
+  grid-template-columns: 15% 6% 20%
 }
 
 /* DASH ADMIN */
@@ -1823,30 +1914,23 @@ table{
   }
 
   /* FOOTER */
-  .footer .box-container{
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    gap: 1rem;
+  .container-footer {
+    margin: 1rem;
   }
+
+  .footer .logo {
+    height: 120px;
+    width: 240px;
+}
 
   .sample h3{
     font-size: 1rem !important;
   }
 
-  .box-send{
-    gap: 4rem;
+  .footer .box-container {
+    gap: 3rem;
   }
 
-  .box-credit{
-    font-size: x-small;
-    gap: 0.8rem;
-    justify-content: flex-start;
-    margin-left: 1rem;
-  }
-  .box-credit .fab{
-    margin-top: 0.8rem;
-  }
 
   /* BLOG */
   .cate-blog{
@@ -1900,8 +1984,8 @@ table{
   }
 
   /* ABOUT US */
-  .box-right{
-    height: auto;
+  .aboutus p{
+    font-size: smaller;
   }
 
   /* FORM LOGIN */
